<resources>
    <string name="app_name">Parking App</string>
    <string name="action_settings">Settings</string>
    <string name="action_register">Register</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_parkings">Parkings</string>
    <string name="nav_item_vehicles">Vehicles</string>
    <string name="nav_item_locations">Locations</string>
    <string name="nav_item_user_profile">User Profile</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_parkings</item>
        <item>@string/nav_item_vehicles</item>
        <item>@string/nav_item_locations</item>
        <item>@string/nav_item_user_profile</item>
    </string-array>

    <string name="title_locations">Locations</string>
    <string name="title_vehicles">Vehicles</string>
    <string name="title_parkings">Parkings</string>
    <string name="title_home">Home</string>
    <string name="title_user_profile">My profile</string>
    <string name="lbl_charge">Charge</string>

    <string name="hint_location">Location Name</string>
    <string name="hint_cost">Cost per minute</string>

    <string name="btn_submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_user_name">My Profile</string>
    <string name="hint_user_id">User Id</string>
    <string name="hint_credit_number">Credit Number</string>
    <string name="hint_plate_number">Plate Number</string>
    <string name="hint_balance">Balance</string>
    <string name="hint_error_balance">Error Balance</string>
    <string name="hint_brand">Brand</string>
    <string name="hint_model">Model</string>
    <string name="hint_colour">Colour</string>
    <string name="hint_year">Year</string>
    <string name="hint_key_vehicle_id">Key Vehicle Id</string>
    <string name="hint_key_location_id">Key Location Id</string>
    <string name="hint_time_in">Time in</string>
    <string name="hint_time_out">Time out</string>
    <string name="hint_active">Active</string>
</resources>
